# OpenGLSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGLSandbox.sln  README.md  premake5.lua
OpenGLSandbox/: CMakeLists.txt  OpenGLSandbox.vcxproj  OpenGLSandbox.vcxproj.filters
OpenGLSandbox/Debug/: vc142.idb
OpenGLSandbox/Debug/OpenGLSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLSandbox.lastbuildstate
OpenGLSandbox/cmake/: LinkENTT.cmake  LinkGLM.cmake  LinkIMGUI.cmake  LinkSPDLOG.cmake  PCH.cmake
OpenGLSandbox/src/: Engine.h  epch.cpp  epch.h
OpenGLSandbox/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Buffer.h  Entity.cpp  Entity.h  EntryPoint.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.cpp  Math.h  Memory.h  PlatformDetection.h  Random.cpp  Random.h  Time.cpp  Time.h  Utility.h  Window.cpp  Window.h
OpenGLSandbox/src/Engine/Event/: KeyEvent.h
OpenGLSandbox/src/Engine/Experimental/: BezierSurface.cpp  Terrain.cpp  Terrain.h
OpenGLSandbox/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
OpenGLSandbox/src/Engine/Rendering/: AtomicCounterBuffer.cpp  AtomicCounterBuffer.h  BezierSurface.cpp  BezierSurface.h  BufferLayout.h  Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  EditorGrid.cpp  EditorGrid.h  EntityRenderer.cpp  EntityRenderer.h  EntityTransform.cpp  EntityTransform.h  EnvironmentMapPipeline.cpp  EnvironmentMapPipeline.h  FrameBuffer.h  Framebuffer.cpp  IndexBuffer.cpp  IndexBuffer.h  Line.cpp  Line.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  (+9 more)
OpenGLSandbox/src/Engine/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
OpenGLSandbox/src/Engine/UI/: PropertyDrawer.cpp  PropertyDrawer.h  UIDrawerHelpers.cpp  UIDrawerHelpers.h
OpenGLSandbox/x64/Debug/: OpenGLSandbox.vcxproj.FileListAbsolute.txt
Sandbox/: CMakeLists.txt  Sandbox.aps  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/assets/410 shaders/: 3DTextureViewer.shader  Clouds.shader  Clouds2.shader  Curl.shader  InfiniteWaterPlane.shader  Normalize.compute  Perlin2D.shader  Planet.shader  PlanetAtmosphereComposite.shader  TerrainGenerator.shader  TerrainLighting.shader  Unlit.shader  WaterPlane.shader  WorleyGenerator.shader  WorleyGenerator2.shader
Sandbox/assets/457 shaders/: Project1.shader
Sandbox/assets/curve-saves/: Bowl Top.txt  D1.txt  D2.txt  E.txt  I1.txt  I2.txt  N1.txt  N2.txt  Noodle Rim.txt  Noodle1.txt  Noodle2.txt  R.txt
Sandbox/assets/curve-saves/My Curves/: BabelCurve.txt  Chopstick1.txt  Looped Curve.txt  MyCurve.txt  NewCurve.txt  TestCurve.txt
Sandbox/assets/curve-saves/Ramen/: Apostrophe Glyph.txt  Bottom X Glyph.txt  Bottom bowl line.txt  Bottom bowl outline.txt  Bowl Rim good.txt  Chopstick.txt  Chopstick1.txt  Chopstick2.txt  Far Right Glyph.txt  Left Straight Line Glyph.txt  Left bowl line.txt  Lower Glyph Left.txt  Middle X Glyph.txt  Noodle in bowl.txt  Noodle out of bowl.txt  Ramen A Line.txt  Ramen A.txt  Ramen E.txt  Ramen M.txt  Ramen N.txt  Ramen R.txt  Ramen Sign.txt  Right bowl line.txt  Test.txt  Up X Glyph.txt  Upper Glyph Left.txt  Upper X Glyph.txt
Sandbox/assets/shaders/: BlinnPhong.shader  BlinnPhongWS.shader  Bloom.shader  Bloom2.shader  BloomDebugWrite.shader  DebugDepth.shader  Depth.shader  EngineBP.shader  EnvironmentReflection.shader  FlatColor.shader  Fractal.shader  Grid.shader  InfiniteGrid.shader  InfiniteGridPractice.shader  LineShader.shader  NormalMapExample.shader  ParticleCompute.shader  Portal.shader  PostProcessing.shader  Preetham.shader  SDFBlinnPhong.shader  Skybox.shader  SkyboxTest.shader  SurfaceCurve.shader  Surfaces.shader  Test.shader  TestCompute.shader  TestPhong.shader  TestWriteToCube.shader  ToonShader.shader
Sandbox/assets/shaders/Atmosphere/: PragueBuffers.include.glsl  PragueCommon.include.glsl  PragueDefinitions.include.glsl  PragueSkyRadiance.glsl  PragueSkyRadiance.impl.glsl  PragueSunRadiance.impl.glsl  PragueTransmittance.glsl  PragueTransmittance.impl.glsl
Sandbox/assets/shaders/BlinnPhong/: BlinnPhongNormalMap.glsl  BlinnPhongSimple.glsl  BlinnPhongVS.glsl  BlinnPhongWS.glsl  EngineBP.glsl  SDFBlinnPhong.glsl
Sandbox/assets/shaders/Clouds/: 3DTextureViewer.glsl  Clouds.glsl  CloudsComposite.glsl  NormalizeWorley.glsl  Planet.glsl  PlanetAtmosphereComposite.glsl  PlanetAtmosphereComposite.shader  SkyVolume.glsl  TextureDisplay.glsl  WaterPlane.glsl
Sandbox/assets/shaders/Depth/: DebugDepth.glsl  Depth.glsl
Sandbox/assets/shaders/Editor/: InfiniteGrid.glsl
Sandbox/assets/shaders/Line/: LineShader.glsl
Sandbox/assets/shaders/Misc/: EnvironmentReflection.glsl  FlatColor.glsl  ProceduralTexturing.glsl  VertexColorSimple.glsl  WorleyWaterPlane.glsl
Sandbox/assets/volumetric-shaders/: LavaLamp.shader
Sandbox/cmake/: CopyAssets.cmake
Sandbox/src/: SandboxApplication.cpp
Sandbox/src/Layers/: AtmosphereLayer.cpp  AtmosphereLayer.h  BlinnPhongLightingDemoLayer.cpp  BlinnPhongLightingDemoLayer.h  BloomDemoLayer.cpp  BloomDemoLayer.h  ComputeParticleDemoLayer.cpp  ComputeParticleDemoLayer.h  ComputeParticleLayer.cpp  ComputeParticleLayer.h  ComputeTextureDemoLayer.cpp  ComputeTextureDemoLayer.h  ComputeTextureLayer.cpp  ComputeTextureLayer.h  CubeMapLayer.cpp  CubeMapLayer.h  CurlDemoLayer.cpp  CurlDemoLayer.h  EnvironmentReflectionDemoLayer.cpp  EnvironmentReflectionDemoLayer.h  FractalLayer.cpp  FractalLayer.h  LightingLayer.cpp  LightingLayer.h  LineLayer.cpp  LineLayer.h  PragueSkyDemoLayer.cpp  PragueSkyDemoLayer.h  PreethamSkyLayer.cpp  PreethamSkyLayer.h  SceneRendererPipelineDemoLayer.cpp  SceneRendererPipelineDemoLayer.h  ShaderProjectLayer.cpp  ShaderProjectLayer.h  ShadowsLayer.cpp  ShadowsLayer.h  SkyBoxLayer.cpp  SkyBoxLayer.h  TerrainDemoLayer.cpp  TerrainDemoLayer.h  (+12 more)
Sandbox/src/Utility/: CurveSerializer.cpp  CurveSerializer.h  ImGuiUtility.cpp  ImGuiUtility.h
(+99 files in other folders)
